Bug 1739048 - Propagate NS_FRAME_CONTAINS_RELATIVE_BSIZE from inner scrolled frame to outer scroll frame. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D130813